--- a/assets/css/tablet.css
+++ b/assets/css/tablet.css
@@ -1073,6 +1073,43 @@
         transform: translateX(-50%);
         line-height: 40px;
     }
+    #maintenance .deep-maintenance {
+        display: grid;
+        grid-template-columns: repeat(12, 100px);
+        grid-template-rows: repeat(10, 50px);
+    }
+
+    #maintenance .deep-maintenance .item:nth-child(1) {
+        grid-column: 1/4;
+        grid-row: 1/5;
+    }
+    #maintenance .deep-maintenance .item:nth-child(2){
+        grid-column: 1/4;
+        grid-row: 5/11;
+    }
+    #maintenance .deep-maintenance .item:nth-child(3){
+        grid-column: 4/7;
+        grid-row: 1/11;
+    }
+    #maintenance .deep-maintenance .item:nth-child(4){
+        grid-column: 7/10;
+        grid-row: 1/11;
+    }
+    #maintenance .deep-maintenance .item:nth-child(5){
+        grid-column: 10/13;
+        grid-row: 1/8;
+    }
+    #maintenance .deep-maintenance .item:nth-child(6){
+        grid-column: 10/13;
+        grid-row: 8/11;
+    }
+    #maintenance .deep-maintenance .item .subitem {
+        width: 100%;
+        height: 100%;
+    }
+    #maintenance .deep-maintenance .item .subitem img {
+        height: 100%;
+    }
 
     #commitment {
         display: flex;
@@ -1242,6 +1279,7 @@
         align-items: center;
         flex-direction: column;
         background-color: #82cd47;
+        position: relative;
     }
 
     #when h2 {
@@ -1269,6 +1307,7 @@
         z-index: 1000;
         background-color: rgba(255, 255, 255, 0.8);
         border-radius: 30px;
+        top: 170px;
     }
 
     #when .wrapper .item {
@@ -1604,6 +1643,7 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        margin-top: 70px;
     }
 
     #blog h2 {
