--- a/assets/css/tablet.css
+++ b/assets/css/tablet.css
@@ -604,11 +604,11 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        flex-direction: column;
         background-color: rgba(255, 255, 255, 0.3);
         padding: 20px;
         border-radius: 15px;
-        margin-bottom: 10px
+        margin-bottom: 10px;
+        max-width: 1200px;
     }
 
     #experience .wrapper .box {
@@ -669,6 +669,16 @@
 
     #experience .wrapper p span textarea {
         width: 100%;
+    }
+
+    #experience .wrapper #brochure {
+        width: 165px;
+        padding: 10px;
+    }
+    #experience .wrapper #brochure p{
+        color: #fff;
+        font-size: 15px;
+        font-weight: 600;
     }
 
     #footer {
